# test_lsp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Documents.h  LICENSE  cmake_install.cmake  main.cpp  start.sh  text.txt  tree.txt
CompilerHandler/: Compiler.cpp  Compiler.h  CompilerOutput.h  scope.h  test_launch.cpp
Logger/: Logger.cpp  Logger.h
Messages/: DictionaryWords.cpp  DictionaryWords.h  Message.h  NotificationMessage.h  Range.h  RequestMessage.h  ResponceMessage.h  ResponceResult.h  ResponseMessage.h  ResponseResult.h
Messages/TextDocument/: Completion.h  CompletionList.h  CompletionParams.h  CompletionResult.h  Diagnostic.h  DiagnosticStruct.h  DidChange.h  DidChangeTextParams.h  DocumentDiagnosticParams.h  FullDocumentDiagnosticReport.h  TextDocument.cpp  TextDocument.h  TextDocumentItem.h  TextDocumentSync.h
Messages/TextDocument/Params/: CompletionParams.h  DidChangeTextParams.h  DidOpenTextDocumentParams.h  DocumentDiagnosticParams.h
Messages/TextDocument/Rapams/: DidChangeTextParams.h  DocumentDiagnosticParams.h  Params.h
Messages/TextDocument/Result/: CompletionResult.h  FullDocumentDiagnosticReport.h  ResponseResult.h
Messages/methods/: InitializeResult.h  ServerInfo.h  initialize.h
